// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionDivider With title should render correctly 1`] = `
.c0 {
  position: relative;
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

.c0::before {
  content: '';
  position: absolute;
  height: 1px;
  border: none;
  background: #BABABA;
  left: 0;
  right: 0;
  top: 0.8125rem;
}

.c1 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  display: inline-block;
  position: relative;
  margin: 0.0625rem 0 0 0;
  padding-right: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0::before {
    top: 0.8125rem;
  }
}

@media (min-width:37.5rem) {
  .c0::before {
    top: 0.9375rem;
  }
}

@media (min-width:80rem) {
  .c0::before {
    top: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-right: 1rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin-top: 1.25rem;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
    dir="ltr"
  >
    This is text in a SectionDivider.
  </h2>
</div>
`;

exports[`SectionDivider With title should render correctly with arabic script typography values 1`] = `
.c0 {
  position: relative;
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

.c0::before {
  content: '';
  position: absolute;
  height: 1px;
  border: none;
  background: #BABABA;
  left: 0;
  right: 0;
  top: 1.0625rem;
}

.c1 {
  font-size: 1.5rem;
  line-height: 2rem;
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  display: inline-block;
  position: relative;
  margin: 0.0625rem 0 0 0;
  padding-left: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0::before {
    top: 0.9375rem;
  }
}

@media (min-width:37.5rem) {
  .c0::before {
    top: 0.9375rem;
  }
}

@media (min-width:80rem) {
  .c0::before {
    top: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-left: 1rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin-top: 1.25rem;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
    dir="rtl"
  >
    بعض محتوى النص
  </h2>
</div>
`;

exports[`SectionDivider With title should render correctly with explicit text direction 1`] = `
.c0 {
  position: relative;
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

.c0::before {
  content: '';
  position: absolute;
  height: 1px;
  border: none;
  background: #BABABA;
  left: 0;
  right: 0;
  top: 0.8125rem;
}

.c1 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  display: inline-block;
  position: relative;
  margin: 0.0625rem 0 0 0;
  padding-right: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0::before {
    top: 0.8125rem;
  }
}

@media (min-width:37.5rem) {
  .c0::before {
    top: 0.9375rem;
  }
}

@media (min-width:80rem) {
  .c0::before {
    top: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-right: 1rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin-top: 1.25rem;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
    dir="ltr"
  >
    This is text in a SectionDivider rendering in ltr mode.
  </h2>
</div>
`;

exports[`SectionDivider Without title should render correctly 1`] = `
.c0 {
  position: relative;
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

.c0::before {
  content: '';
  position: absolute;
  height: 1px;
  border: none;
  background: #BABABA;
  left: 0;
  right: 0;
  top: 0;
}

<div
  className="c0"
/>
`;
